--- a/Portfolio-frontend/portfolio_frontend-main/site-contents/index.html
+++ b/Portfolio-frontend/portfolio_frontend-main/site-contents/index.html
@@ -497,7 +497,7 @@
 
             <div>
               <p>You are visitor number:
-              <p id="visitor"></p>
+              <p id="visitorCountDisplay"></p>
               </p>
             </div>
             <ul class="social-icon">
@@ -525,6 +525,7 @@
 
   <!-- app.js has javascript for the visitor counter-->
   <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="assets/js/jquery-min.js"></script>
