--- a/Portfolio-frontend/portfolio_frontend-main/site-contents/index.html
+++ b/Portfolio-frontend/portfolio_frontend-main/site-contents/index.html
@@ -234,23 +234,24 @@
                 <h3 class="line-title">Cloud Resume Challenge</h3>
 
                 <p class="line-text">
-
-                  The website you are looking at has been created based on the
-                  Cloud Resume Challenge by Forrest Brazeal.
-                  The challenge gives a roadmap for creating a fullstack project in the cloud.
+                  bonganithela.com is my personal portfolio website,
+                   built to showcase my work and skills as a full-stack developer. 
+                   the site reflects my approach to development—from 
+                   intuitive front-end design to back-end architecture.
+                  
                 </p>
                 <p class="tech"><b>Frontend:</b> AWS Amplify, AWS route 53, CloudFront, AWS certificate Manager, HTML/CSS, Javascript </br>
                   <b>Backend:</b> AWS API Gateway, AWS Lambda, AWS DynamoDB </br>
                   <b>IaC:</b>AWS CDK (Cloud Development Kit) </br>
-                  <b>CI/CD:</b> GitHub Actions </br>
-                  <b>Testing:</b> Cypress
+                  <b>CI/CD:</b> Automatic deployment with Amplify. </br>
+                  <!-- <b>Testing:</b> Cypress -->
                 </p>
                 <div class="overlay">
                   <div class="icons">
                     <a class="btn btn-common" href="https://github.com/iamrich0/Portfolio-frontend"
                       role="button">Frontend on GitHub</a>
-                    <!-- a class="btn btn-common" href="https://github.com/iamrich0/portfolio_backend" role="button">Backend
-                      on github</a> -->
+                    <a class="btn btn-common" href="https://github.com/iamrich0/Portfolio-backend" role="button">Backend
+                      on github</a> >
                   </div>
                 </div>
                 </br>
